--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     //configChatbot.replicas = '/data/data-1.json';
     configChatbot.replicas = {
       bot: {
-        0: { content: ['Привет!', 'Я Инфинити - бот поддержки сайта <a href="https://itchief.ru" target="_blank">itchief.ru</a>'], human: [0, 1, 2] },
+        0: { content: ['Приветствую!', 'Я помощник Ратт - чат-бот национального парка Куршская коса. Спасибо, что заинтересовались национальным парком Куршская коса! Идеально подойду тем, кто хочет найти ответы на свои вопросы!'], human: [0, 1, 2] },
         1: { content: 'Я тоже рад, как мне к Вам обращаться?', human: [3] },
         2: { content: 'Как мне к Вам обращаться?', human: [3] },
         3: { content: '{{name}}, что Вас интересует?', human: [4, 5] },
@@ -75,9 +75,9 @@
         9: { content: 'Готово! {{name}}, мы свяжемся с вами в ближайшее время по {{contact}}. Всего хорошего!', human: [6] },
       },
       human: {
-        0: { content: 'Привет! Я рад с тобой познакомиться', bot: 1 },
-        1: { content: 'Салют!', bot: 2 },
-        2: { content: 'Приветик, Инфинити!', bot: 2 },
+        0: { content: 'Привет! Мне нужна помощь', bot: 1 },
+        1: { content: '"Помоги мне!', bot: 2 },
+        2: { content: 'Ратт, помоги мне!', bot: 2 },
         3: { content: '', bot: 3, name: 'name' },
         4: { content: 'Меня интересует, как я могу использовать этот чат-бот у себя на сайте', bot: 4 },
         5: { content: 'Хочу оставить запрос разработчику чат-бота', bot: 5 },
