--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     //configChatbot.replicas = '/data/data-1.json';
     configChatbot.replicas = {
       bot: {
-        0: { content: ['Приветствую!', 'Я помощник Ратт - чат-бот национального парка Куршская коса. Спасибо, что заинтересовались национальным парком Куршская коса! Идеально подойду тем, кто хочет найти ответы на свои вопросы!'], human: [0, 1, 2] },
-        1: { content: 'Я тоже рад, как мне к Вам обращаться?', human: [3] },
-        2: { content: 'Как мне к Вам обращаться?', human: [3] },
-        3: { content: '{{name}}, что Вас интересует?', human: [4, 5] },
-        4: { content: '{{name}}, для этого перейдите на <a href="https://itchief.ru/javascript/chatbot-for-website" target="_blank">эту страницу</a>. Она содержит подробную инструкцию по использованию этого чат-бота.', human: [6] },
+        0: { content: ['Приветствую!', 'Я помощник Ратт - чат-бот национального парка Куршская коса. Спасибо, что заинтересовались национальным парком Куршская коса! Идеально подойду тем, кто хочет найти ответы на свои вопросы!'], human: [0, 1, 2, 3] },
+        1: { content: 'Национальный парк открыт для посещения 24/7 - круглосуточно и круглодочино. Визит-центр, расположенный на 14 км косы, открыт с 9 до 17 часов: с мая по сентябрь ежедневно, с октября по апрель - со среды по восресенье. Полевой стационар кольцевания птиц открыт для посещения с апреля по октябрь с 10 до 17 часов.', human: [10] },
+        2: { content: 'Для осмотра основных достопримечательностей на Куршской косе требуется транспорт. Можно перемещаться на автомобиле, туристическом или рейсовом автобусе. Есть парковки. Экскурсию в составе туристической группы нужно заказывать заранее в любой из калинининградских турфирм, рейсовый автобус № 210 отправляется от вокзала в Зеленоградске, в летний сезон из Калининграда на косу ходит автобус № 593.', human: [10] },
+        3: { content: 'Организовывать туристическую стоянку на Куршской косе запрещено! В дневное время можно оставить палатку или параван на берегу моря для защиты от солнца и ветра. Ставить палатку для ночлега можно только в специально организованных для этого местах: на территории турбаз, туркемпингов и гостевых домов, на пикниковом месте возле озера Чайка (32-й км).', human: [10] },
+        4: { content: 'Чтобы посетить национальный парк с экскурсией, нужно заранее записаться в группу в любой из калининградских турфирм или заказать индивидуальную экскурсию на автомобиле/микроавтобусе с выездом из Калининграда или курортных городов области. Экскурсию по залам Визит-центра и тематические занятия для детских групп можно заказать, позвонив в отдел экопросвещения 8 4012 310028.', human: [10] },
         5: { content: "{{name}}, какой у Вас вопрос?", human: [7] },
         6: { content: '{{name}}, мы получили Ваш вопрос! Скажите, как с Вами удобнее будет связаться?', human: [8, 9] },
         7: { content: '{{name}}, укажите пожалуйста ваш телефон', human: [10] },
@@ -75,17 +75,17 @@
         9: { content: 'Готово! {{name}}, мы свяжемся с вами в ближайшее время по {{contact}}. Всего хорошего!', human: [6] },
       },
       human: {
-        0: { content: 'Привет! Мне нужна помощь', bot: 1 },
-        1: { content: '"Помоги мне!', bot: 2 },
-        2: { content: 'Ратт, помоги мне!', bot: 2 },
-        3: { content: '', bot: 3, name: 'name' },
+        0: { content: 'В какие дни и в какое время национальный парк "Куршская коса" открыт для посещения?', bot: 1 },
+        1: { content: 'Как попасть на Куршскую косу? Мы приехали на КПП/в Зеленоградск - куда идти дальше?', bot: 2 },
+        2: { content: 'Где на Куршской косе можно разместиться с палаткой?', bot: 3 },
+        3: { content: 'Как попасть на экскурсию на Куршскую косу?', bot: 4 },
         4: { content: 'Меня интересует, как я могу использовать этот чат-бот у себя на сайте', bot: 4 },
         5: { content: 'Хочу оставить запрос разработчику чат-бота', bot: 5 },
         6: { content: 'В начало', bot: 3 },
         7: { content: '', bot: 6, name: '' },
         8: { content: 'по телефону', bot: 7 },
         9: { content: 'по email', bot: 8 },
-        10: { content: '', bot: 9, name: 'contact' },
+        10: { content: 'Ясно - понятно...', bot: 0 },
       }
     }
     
