--- a/index.html
+++ b/index.html
@@ -68,10 +68,15 @@
         2: { content: 'Для осмотра основных достопримечательностей на Куршской косе требуется транспорт. Можно перемещаться на автомобиле, туристическом или рейсовом автобусе. Есть парковки. Экскурсию в составе туристической группы нужно заказывать заранее в любой из калинининградских турфирм, рейсовый автобус № 210 отправляется от вокзала в Зеленоградске, в летний сезон из Калининграда на косу ходит автобус № 593.', human: [10] },
         3: { content: 'Организовывать туристическую стоянку на Куршской косе запрещено! В дневное время можно оставить палатку или параван на берегу моря для защиты от солнца и ветра. Ставить палатку для ночлега можно только в специально организованных для этого местах: на территории турбаз, туркемпингов и гостевых домов, на пикниковом месте возле озера Чайка (32-й км).', human: [10] },
         4: { content: 'Чтобы посетить национальный парк с экскурсией, нужно заранее записаться в группу в любой из калининградских турфирм или заказать индивидуальную экскурсию на автомобиле/микроавтобусе с выездом из Калининграда или курортных городов области. Экскурсию по залам Визит-центра и тематические занятия для детских групп можно заказать, позвонив в отдел экопросвещения 8 4012 310028.', human: [10] },
-        5: { content: "{{name}}, какой у Вас вопрос?", human: [7] },
-        6: { content: '{{name}}, мы получили Ваш вопрос! Скажите, как с Вами удобнее будет связаться?', human: [8, 9] },
-        7: { content: '{{name}}, укажите пожалуйста ваш телефон', human: [10] },
-        8: { content: '{{name}}, укажите пожалуйста ваш Email ниже', human: [10] },
+        5: { content: "Да, каждый вьезд на территорию национального парка необходимо оплачивать и покупать входной билет.", human: [10] },
+        6: { content: 'е нужно, билет действует трое суток при условии непрерывного пребывания на территории национального парка. Билет необходимо сохранять до момента выезда с Куршской косы.', human: [10] },
+        7: { content: 'Пассажиры рейсовых автобусов могут купить входной билет только онлайн - на сайте национального парка для перехода на сайт онлайн-оплаты нужно нажать "оплатить посещение".  Для посещения экологических троп, маршрутов и других объектов национального парка это нужно сделать обязательно. Если пассажир едет на Куршскую косу с иными целями, например, в какой-то из поселков, покупать входной билет, в летний сезон из Калининграда на косу ходит автобус № 593.', human: [10] },
+        8: { content: '1.1. Во время вашего пребывания на территории национального парка будьте вежливы друг с другом.
+1.2. При парковке автомобилей и мототранспортных средств (далее - "Транспортные средства") не загораживайте проезд пешеходам и другим транспортным средствам.
+1.3. Соблюдайте требования указателей, информационных табличек, стендов и других информационных вывесок.
+1.4. Не оставляйте детей без присмотра.
+1.5. Посетитель должен знать, что национальный парк - это природная территория, в основном покрытая лесами, прогулка по которой может сопровождаться трудностями, характерными для любого пешего похода. Соблюдайте общепринятые правила пребывания в лесу, включая, но не ограничиваясь ими:
+- учитывайте погодные условия и сезонные особенности – помните, что деревянный настил может быть скользким', human: [10] },
         9: { content: 'Готово! {{name}}, мы свяжемся с вами в ближайшее время по {{contact}}. Всего хорошего!', human: [6] },
       },
       human: {
@@ -79,10 +84,10 @@
         1: { content: 'Как попасть на Куршскую косу? Мы приехали на КПП/в Зеленоградск - куда идти дальше?', bot: 2 },
         2: { content: 'Где на Куршской косе можно разместиться с палаткой?', bot: 3 },
         3: { content: 'Как попасть на экскурсию на Куршскую косу?', bot: 4 },
-        4: { content: 'Меня интересует, как я могу использовать этот чат-бот у себя на сайте', bot: 4 },
-        5: { content: 'Хочу оставить запрос разработчику чат-бота', bot: 5 },
-        6: { content: 'В начало', bot: 3 },
-        7: { content: '', bot: 6, name: '' },
+        4: { content: 'Нужно ли каждый раз покупать входной билет при въезде на территорию национального парка?', bot: 5 },
+        5: { content: 'Если приехать вечером и разместиться на Куршской косе на ночлег, нужно ли на следующий день снова покупать входной билет в парк?', bot: 6 },
+        6: { content: 'Как покупать входные билеты посетителям, въезжающим на рейсовых автобусах, и в каких случаях им можно не покупать билеты?', bot: 7 },
+        7: { content: 'Правила поведения на территории национального парка Куршская коса', bot: 8},
         8: { content: 'по телефону', bot: 7 },
         9: { content: 'по email', bot: 8 },
         10: { content: 'Ясно - понятно...', bot: 0 },
