--- a/index.html
+++ b/index.html
@@ -71,12 +71,7 @@
         5: { content: "Да, каждый вьезд на территорию национального парка необходимо оплачивать и покупать входной билет.", human: [10] },
         6: { content: 'е нужно, билет действует трое суток при условии непрерывного пребывания на территории национального парка. Билет необходимо сохранять до момента выезда с Куршской косы.', human: [10] },
         7: { content: 'Пассажиры рейсовых автобусов могут купить входной билет только онлайн - на сайте национального парка для перехода на сайт онлайн-оплаты нужно нажать "оплатить посещение".  Для посещения экологических троп, маршрутов и других объектов национального парка это нужно сделать обязательно. Если пассажир едет на Куршскую косу с иными целями, например, в какой-то из поселков, покупать входной билет, в летний сезон из Калининграда на косу ходит автобус № 593.', human: [10] },
-        8: { content: '1.1. Во время вашего пребывания на территории национального парка будьте вежливы друг с другом.
-1.2. При парковке автомобилей и мототранспортных средств (далее - "Транспортные средства") не загораживайте проезд пешеходам и другим транспортным средствам.
-1.3. Соблюдайте требования указателей, информационных табличек, стендов и других информационных вывесок.
-1.4. Не оставляйте детей без присмотра.
-1.5. Посетитель должен знать, что национальный парк - это природная территория, в основном покрытая лесами, прогулка по которой может сопровождаться трудностями, характерными для любого пешего похода. Соблюдайте общепринятые правила пребывания в лесу, включая, но не ограничиваясь ими:
-- учитывайте погодные условия и сезонные особенности – помните, что деревянный настил может быть скользким', human: [10] },
+        8: { content: '1.1. Во время вашего пребывания на территории национального парка будьте вежливы друг с другом.\n1.2. При парковке автомобилей и мототранспортных средств (далее - "Транспортные средства") не загораживайте проезд пешеходам и другим транспортным средствам.\n1.3. Соблюдайте требования указателей, информационных табличек, стендов и других информационных вывесок.\n1.4. Не оставляйте детей без присмотра.\n1.5. Посетитель должен знать, что национальный парк - это природная территория, в основном покрытая лесами, прогулка по которой может сопровождаться трудностями, характерными для любого пешего похода. Соблюдайте общепринятые правила пребывания в лесу, включая, но не ограничиваясь ими:\n- учитывайте погодные условия и сезонные особенности – помните, что деревянный настил может быть скользким', human: [10] },
         9: { content: 'Готово! {{name}}, мы свяжемся с вами в ближайшее время по {{contact}}. Всего хорошего!', human: [6] },
       },
       human: {
